--- a/template/default/header.htm
+++ b/template/default/header.htm
@@ -8,12 +8,12 @@
       </div>
       <div class="nav_profile" id="iCMS-nav-profile">
         <div class="top_nav_profile">
-          <a class="iCMS-user-home hover-toggle" href="<!--{iCMS:router url='/user/home'}-->">
+          <a class="iCMS-user-home iCMS-hover-toggle" href="<!--{iCMS:router url='/user/home'}-->">
           <img class="avatar" src="<!--{$site.urls.ui}-->/avatar.gif">
           <span class="name">iCMS</span>
           <b class="caret"></b>
           </a>
-          <ul class="dropdown-menu iCMS-hover" id="iCMS-user-menu">
+          <ul class="dropdown-menu iCMS-hover-wrap" id="iCMS-user-menu">
             <li> <a href="<!--{iCMS:router url='/user/home'}-->" target="_blank"> <i class="fa fa-user"></i> 我的主页</a> </li>
             <li> <a href="<!--{iCMS:router url='/user/article'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的文章</a> </li>
             <li> <a href="<!--{iCMS:router url='/user/comment'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的评论</a> </li>
