--- a/template/iCMS/comment/list.default.htm
+++ b/template/iCMS/comment/list.default.htm
@@ -12,14 +12,17 @@
 	<body class="iCMS-comment-page">
 		<!--{/if}-->
 		<style>
-.iCMS-comment-list-wrap { margin: 10px; background: #fff; position: relative; border-top: 1px solid #ddd; }
+.iCMS-comment-list-wrap { margin: 10px; background: #fff; position: relative; }
 .iCMS-comment-list-wrap .load-more { padding: 8px 0; display: block; font-size: 13px; height: 22px; text-align: center; border: 1px solid #eee; border-width: 1px 0 0; color: #698ebf; box-shadow: 0 0 5px rgba(180, 180, 180, .1) inset; text-shadow: 0 1px 0 #fff }
 .iCMS-comment-list-wrap .load-more .text { position: relative }
 .iCMS-comment-list-wrap .load-more .spinner { position: absolute; top: 0; right: -20px; display: none }
 .iCMS-comment-list-wrap .load-more.loading .spinner { display: block }
 .iCMS-comment-list-wrap .load-more:active { background: #fbfbfb; box-shadow: 0 0 5px rgba(180, 180, 180, .2) inset }
 .iCMS-comment-list-wrap .load-more+.iCMS-comment-item { margin: 0; padding: 8px 12px; border-top: 1px solid #eee }
-
+.iCMS-comment-list-wrap h3 {
+padding: 18px 0 5px;
+font: normal 16px/20px "微软雅黑";
+}
 .iCMS-comment-item { position: relative; margin: 0 12px; padding: 8px 0 }
 .iCMS-comment-item .cmt-content-wrap { margin: 0 0 0 35px }
 .iCMS-comment-item>.zm-item-link-avatar { float: left; margin: 0px 8px 0px 0px; }
@@ -32,8 +35,9 @@
 .iCMS-comment-item .like-num>span, .iCMS-comment-item .like-num>em { font-style: normal; vertical-align: -2px }
 .iCMS-comment-item .like-num.nil { display: none }
 .iCMS-comment-item.focusin .zm-comment-op-link, .iCMS-comment-item:hover .zm-comment-op-link { visibility: visible }
-.iCMS-comment-item+.iCMS-comment-item { border-top: solid 1px #eee }
+.iCMS-comment-item+.iCMS-comment-item { border-top: dotted 1px #eee }
 .iCMS-comment-item .zm-comment-form { padding: 15px 0 }
+
 
 .zm-comment-info { text-align: center }
 .zm-comment-form .zm-comment-textarea { padding: 7px 8px; color: #999; font-size: 13px; line-height: 22px; min-height: 22px; width: 95% }
@@ -50,9 +54,10 @@
 .zg-icon-comment-like, .zm-comment-op-link>.iCMS-icon { margin-right: 5px; width: 11px; height: 11px; vertical-align: -1px }
 
 		</style>
-		<div class="iCMS-comment-list-wrap" id="iCMS-comment-list-box">
-			<ul class="iCMS-comment-list">
-				<!--{iCMS:comment:list loop="true" appid=$comment.appid iid=$comment.iid}-->
+		<div class="iCMS-comment-list-wrap">
+			<span class="label label-info">精彩评论</span>
+			<ul class="iCMS-comment-list" id="iCMS-comment-list-box">
+				<!--{iCMS:comment:list loop="true" page="true" row="8" appid=$comment.appid iid=$comment.iid}-->
 				<li class="iCMS-comment-item" data-id="<!--{$comment_list.id}-->">
 
 <a title="<!--{$comment_list.user.name}-->" data-tip="iCMS:ucard:<!--{$comment_list.user.uid}-->" class="zm-item-link-avatar" href="<!--{$comment_list.user.url}-->">
@@ -88,6 +93,7 @@
 				</li>
 				<!--{/iCMS}-->
 			</ul>
+			<div class="iCMS-pagination"><!--{$iPAGE|method:'show(4)'}--></div>
 		</div>
 		<!--{if $comment.display=="iframe"}-->
 	</body>
