--- a/public/theme/default.css
+++ b/public/theme/default.css
@@ -113,7 +113,11 @@ border-radius: 0px; background:#fff; color:#ccc;}
 #guide { margin: 10px 0px 0px 10px; color: #999; }
 #page, .article-publish, .account-manage { padding:0 20px; }
 #page { padding-bottom:25px; }
-#page h1 { margin:20px 0; padding-left:20px; border-left:5px solid #369; color:#369; text-align:left; font:normal 28px/46px "微软雅黑"; }
+#page h1 { font: bold 34px/40px 微软雅黑;
+color: #333;
+padding-left: 0px;
+border-left: 0px;
+margin: 30px 0;}
 .article-publish h1, .account-manage h1, .article-manage h1 { margin:20px 10px; color:#333; font:normal 28px/46px "微软雅黑"; }
 #page blockquote { margin:20px 0; padding:15px 20px; border:1px dashed #eaeaea; background:#fbfbfb; color:#999; text-indent:24px; font-size:12px; line-height:22px; }
 #page h3 { margin:30px 0; font-size:14px; }
