--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -130,7 +130,10 @@ color:#369;
 <div class="clearfix"></div>
 
         <div class="comments_list clearfix">
+          <h3 class="label label-info"><i class="fa fa-comments"></i> 精彩评论</h3>
           <!--{iCMS:comment:list display="default" appid="1" iid=$article.id}-->
+          <!--{iCMS:comment:list display="ajax" appid="1" iid=$article.id}-->
+          <!--{iCMS:comment:list display="iframe" appid="1" iid=$article.id}-->
         </div>
         <div class="comment_form clearfix">
           <!--{iCMS:comment:form ref="true"}-->
