--- a/template/iCMS/comment/list.default.htm
+++ b/template/iCMS/comment/list.default.htm
@@ -53,7 +53,7 @@
 		</style>
 		<div class="iCMS-comment-list-wrap">
 			<ul class="iCMS-comment-list" id="iCMS-comment-list-box">
-				<!--{iCMS:comment:list loop="true" page="true" row="8" appid=$comment.appid iid=$comment.iid}-->
+				<!--{iCMS:comment:list loop="true" page="true" row="8" vars=$comment}-->
 				<li class="iCMS-comment-item" data-id="<!--{$comment_list.id}-->">
 
 <a title="<!--{$comment_list.user.name}-->" data-tip="iCMS:ucard:<!--{$comment_list.user.uid}-->" class="cmt-item-link-avatar" href="<!--{$comment_list.user.url}-->">
