--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -14,7 +14,7 @@
 <script>
 iCMS.config = {
 	'COOKIE_PRE':'<!--{$iCMS.COOKIE_PRE}-->',
-	'API':'<!--{iCMS:router url='/api'}-->',
+	'API':"<!--{iCMS:router url='/api'}-->",
 	'public':'<!--{$site.urls.public}-->',
 }
 
