--- a/public/theme/default.css
+++ b/public/theme/default.css
@@ -124,10 +124,8 @@
 .article-info .share-area { float: right; width: 200px; }
 .article-body p { margin: 6px 0; text-indent: 28px; font-size: 14px; line-height: 24px; }
 .article-pagenav { position: relative; margin: 0 auto; padding: 10px; background: #f3f3f3; text-align: center; font-size: 14px; }
-.article-pagenav a { display: inline-block; margin: 4px; padding: 1px 12px; border: 1px solid #d5d5d5; background-color: #fff; color: #666; line-height: 24px; }
-.article-pagenav a.current { border: 2px solid #08c; color: #333; font-weight: bold; }
-.article-pagenav a.prev, .article-pagenav a.next { font-weight: bold; }
-.article-pagenav a:hover { background-color: #fff; color: #666; }
+.article-pagenav a { color: #666;}
+.article-pagenav .current { border: 1px solid #08c; background-color: #3a87ad; color: #fff; font-weight: bold; }
 .comments_list { }
 .comments_list h3 { padding: 5px 12px; font-size: 14px; margin-left: 10px; }
 .comment_form { border-top: 1px solid #eaeaea; }
