--- a/public/ui/iCMS-6.0.0.css
+++ b/public/ui/iCMS-6.0.0.css
@@ -192,8 +192,8 @@ url('iconfont/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */ }
 -moz-osx-font-smoothing: grayscale; }
 
 /* iCMS-pagination */
-.iCMS-pagination { margin: 10px; clear: both; height: 30px; }
-.iCMS-pagination a, .iCMS-pagination span { float: left; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
+.iCMS-pagination { margin: 10px; clear: both; height: 30px;position: relative;text-align: center; }
+.iCMS-pagination a, .iCMS-pagination span {display: inline-block; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
 .iCMS-pagination a:hover, .iCMS-pagination a:focus { background-color: #f5f5f5 }
 .iCMS-pagination a.page_nowindex { color: #999; cursor: default }
 .iCMS-pagination a:first-child, .iCMS-pagination span:first-child { border-left-width: 1px; -webkit-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -moz-border-radius-topleft: 4px }
