--- a/template/iCMS/comment/list.iframe.htm
+++ b/template/iCMS/comment/list.iframe.htm
@@ -1,1 +1,1 @@
-<iframe scrolling="no" frameborder="0" marginheight="0" marginwidth="0" border="0" class="iCMS-API-iframe comment_list_iframe" src="<!--{iCMS:router url='/api' query=$query}-->"></iframe>
+<iframe scrolling="no" frameborder="0" marginheight="0" marginwidth="0" border="0" class="iCMS-API-iframe comment_list_iframe" src="<!--{iCMS:router url='/api' query=$vars.query}-->"></iframe>
