--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -6,7 +6,7 @@
     <meta name="keywords" content="<!--{$article.keywords}-->" />
     <meta name="description" content="<!--{$article.description}-->"/>
     <meta name="mobile-agent" content="format=html5;url=<!--{$article.url}-->"/>
-    <!--{iCMS:public:ui asd=true asd=aqweiouqweoi}-->
+    <!--{iCMS:public:ui}-->
     <link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
   </head>
   <body>
@@ -82,9 +82,9 @@
 
         <div class="comments_list clearfix">
           <h3 class="label label-info"><i class="fa fa-comments"></i> 精彩评论</h3>
-          <!--{iCMS:comment:list page="true" display="default" row="1" appid="1" iid=$article.id}-->
-          <!--{iCMS:comment:list display="ajax" appid="1" iid=$article.id}-->
-          <!--{iCMS:comment:list page="true" display="iframe" appid="1" iid=$article.id}-->
+          <!--{iCMS:comment:list page="true" display="default" row="1" appid="$article.appid" iid="$article.id"}-->
+          <!--{iCMS:comment:list display="ajax" appid="$article.appid" iid="$article.id"}-->
+          <!--{iCMS:comment:list page="true" display="iframe" appid="$article.appid" iid="$article.id"}-->
         </div>
         <div class="comment_form clearfix">
           <!--{iCMS:comment:form ref="true"}-->
@@ -97,7 +97,7 @@
           </div>
           <div class="bd">
           <ul class="artical-top artical-top-num">
-            <!--{iCMS:article:list loop="true" row="10" orderby="hot" cid=$category.cid}-->
+            <!--{iCMS:article:list loop="true" row="10" orderby="hot" cid="$category.cid"}-->
             <!--{if $article_list.rownum<4}-->
             <li class="top-1"><span><!--{$article_list.rownum}--></span><p><a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a></p><p><!--{$article_list.description}--></p></li>
             <!--{else}-->
