--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -81,7 +81,7 @@ border-top: 1px solid #5e5e5e;*/
 #sidebar > ul ul li:first-child a { border-top: 0; }
 #sidebar > ul ul li:last-child a { border-bottom: 0; }
 #sidebar .navbar-inner { background-image: none; background-color: #f8f8f8; }
-#sidebar #mini { border-bottom: 1px solid #302F2F; background: #454545; color: #A8A8A8; text-align: center; padding: 0; width: 36px; height: 28px; display: block; position: absolute; right: -3px; border-radius: 5px 0 0 5px; cursor: pointer; margin-top: 5px; font-size: 18px; -webkit-transition: all .1s linear 0s; transition: all .1s linear 0s }
+#sidebar #mini {border-bottom: 1px solid #302F2F; background: #454545; color: #A8A8A8; text-align: center; padding: 0; width: 36px; height: 28px; display: block; position: absolute; right: -3px; border-radius: 5px 0 0 5px; cursor: pointer; margin-top: 5px; font-size: 18px; -webkit-transition: all .1s linear 0s; transition: all .1s linear 0s;padding-bottom: 4px;}
 #sidebar #mini:hover { background: #646464; color: #E4E4E4; right: 0 }
 #sidebartop { border-left: 0px; border-right: 0px; border-top: 0px; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; background-image: none; padding-right: 0; padding-left: 8px; }
 #sidebartop .iCMS-logo { padding: 0px; width: 135px; height: 27px; margin-left: 5px; margin-right: 10px; }
