--- a/template/default/user/profile.htm
+++ b/template/default/user/profile.htm
@@ -19,11 +19,11 @@
             <div class="pro_sidebar fl">
               <h1><i class="icon_user"></i> 账号设置</h1>
               <div class="base_info">
-                <a href="<!--{iCMS:router url='/user/profile/base'}-->"<!--{if $pg=="base"}--> class="c"<!--{/if}-->>基本信息</a><br>
-                <a href="<!--{iCMS:router url='/user/profile/avatar'}-->"<!--{if $pg=="avatar"}--> class="c"<!--{/if}-->>修改头像</a><br>
-                <a href="<!--{iCMS:router url='/user/profile/setpassword'}-->"<!--{if $pg=="setpassword"}--> class="c"<!--{/if}-->>修改密码</a><br>
-                <a href="<!--{iCMS:router url='/user/profile/bind'}-->"<!--{if $pg=="bind"}--> class="c"<!--{/if}-->>帐号绑定</a><br>
-                <a href="<!--{iCMS:router url='/user/profile/custom'}-->"<!--{if $pg=="custom"}--> class="c"<!--{/if}-->>个人封面</a><br>
+                <a href="<!--{iCMS:router url='/user/profile/base'}-->"<!--{if $pg=="base"}--> class="c"<!--{/if}-->><i class="fa fa-info-circle"></i> 基本信息</a><br>
+                <a href="<!--{iCMS:router url='/user/profile/avatar'}-->"<!--{if $pg=="avatar"}--> class="c"<!--{/if}-->><i class="fa fa-meh-o"></i> 修改头像</a><br>
+                <a href="<!--{iCMS:router url='/user/profile/setpassword'}-->"<!--{if $pg=="setpassword"}--> class="c"<!--{/if}-->><i class="fa fa-cog"></i> 修改密码</a><br>
+                <a href="<!--{iCMS:router url='/user/profile/bind'}-->"<!--{if $pg=="bind"}--> class="c"<!--{/if}-->><i class="fa fa-life-ring"></i> 帐号绑定</a><br>
+                <a href="<!--{iCMS:router url='/user/profile/custom'}-->"<!--{if $pg=="custom"}--> class="c"<!--{/if}-->><i class="fa fa-picture-o"></i> 个人封面</a><br>
               </div>
             </div>
             <div class="pro_contents fl">
