--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="iDreamSoft Inc." name="Copyright" />
 <link rel="stylesheet" href="<!--{$site.urls.lib}-->/bootstrap/css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="<!--{$site.urls.lib}-->/bootstrap/css/font-awesome.min.css" type="text/css" />
+<link rel="stylesheet" href="<!--{$site.urls.lib}-->/font-awesome-4.1.0/css/font-awesome.min.css" type="text/css" />
 <link rel="stylesheet" href="<!--{$site.urls.ui}-->/artDialog-5.0.4/skins/default.css" type="text/css" />
 <link rel="stylesheet" href="<!--{$site.urls.ui}-->/iCMS-6.0.0.css" type="text/css" />
 <script src="<!--{$site.urls.lib}-->/jquery.min.js"></script>
